--- a/tests/stress-test.org
+++ b/tests/stress-test.org
@@ -3665,6 +3665,265 @@ Once that is evaluated, links like these will export fine i.e. no
 :EXPORT_FILE_NAME: link-to-headings-by-name
 :EXPORT_OPTIONS: num:t toc:t
 :END:
+- [[#preparation][Preparation]]
+- [[#post-1][Post 1]]
+- [[#post-2][Post 2]]
+- [[#image--figure][Image / Figure]]
+  - [[#image-links][Image links]]
+  - [[#inline-hyperlinked-and-non-hyperlinked-images][Inline hyperlinked and non-hyperlinked images]]
+  - [[#image-captions][Image captions]]
+  - [[#image-with-hugo-figure-shortcode-parameters-set-using-attr_html][Image with Hugo =figure= shortcode parameters set using =ATTR_HTML=]]
+  - [[#inlined-svg][Inlined SVG]]
+  - [[#figures-from-included-org-file][Figures from included Org file]]
+- [[#video][Video]]
+  - [[#embedded-video][Embedded Video]]
+- [[#heading][Heading]]
+  - [[#setting-heading-anchors][Setting heading anchors]]
+  - [[#post-heading-with-crazy-characters][Post heading with crazy characters]]
+  - [[#html-container][HTML Container]]
+  - [[#export-with-planning-info][Export with planning info]]
+  - [[#export-with-sub-heading-tags][Export with sub-heading tags]]
+- [[#title-in-front-matter][Title in Front Matter]]
+  - [[#awesome-title-with-quoted-text][Awesome title with "quoted text"]]
+  - [[#under_scores_in_title][Under_scores_in_title]]
+  - [[#allow-empty-titles][Allow empty titles]]
+  - [[#en-dash----em-dash-----horizontal-ellipsis--in-titles][En dash --, Em dash ---, Horizontal ellipsis ... in titles]]
+  - [[#title-with-lots-and-lots-of--asterisks][*Title with **lots** and *lots* of * aste*risks**]]
+  - [[#title-with-lots-and-lots----of-forwardslashes][Title with /lots/ and lots / / / of forward/slashes]]
+  - [[#_title_-with-__lots-and-_lots_-_-_-of-under_scores__][_Title_ with __lots and _lots_ _ _ of under_scores__]]
+  - [[#title-with-lots-of----backticks-foo-bar--zoomba][=Title with lots= of ` ` ` backticks` `foo =bar= ~ ~zoomba~]]
+  - [[#title-with-lots-of----backticks--asterisks-bold-italics-retain_-in-monospace-underscores-_-_-_foo_-bar-][=Title with lots= of ` ` ` backticks` * asterisks *bold*, /italics/ =retain*,_,` in monospace= underscores _ _ _*foo*_ =bar= **]]
+  - [[#2020-04-19][2020-04-19]]
+  - [[#awesome-title-with--symbol][Awesome title with % symbol]]
+- [[#section][Section]]
+  - [[#articles][Articles]]
+  - [[#emacs-posts][Emacs posts]]
+  - [[#hugo_section-set-in-post-subtree][HUGO_SECTION set in post subtree]]
+  - [[#null-hugo_section][Null HUGO_SECTION]]
+  - [[#section-fragment-concatenation][Section fragment concatenation]]
+  - [[#hugo-bundle-concatenation][Hugo Bundle concatenation]]
+- [[#tables][Tables]]
+  - [[#simple-table][Simple Table]]
+  - [[#table-with-narrowest-cols][Table with narrowest cols]]
+  - [[#table-with-top-border][Table with top border]]
+  - [[#table-with-bottom-border][Table with bottom border]]
+  - [[#table-with-top-and-bottom-border][Table with top and bottom border]]
+  - [[#table-with-rule-after-first-row][Table with rule after first row]]
+  - [[#table-with-borders-and-rule-after-first][Table with borders and rule after first]]
+  - [[#table-with-single-column][Table with single column]]
+  - [[#table-with-single-row][Table with single row]]
+  - [[#table-with-single-cell][Table with single cell]]
+  - [[#table-column-alignment][Table column alignment]]
+  - [[#table-name][Table name]]
+  - [[#table-caption][Table caption]]
+  - [[#table-styling-with-attr_html-and-attr_css][Table Styling with ATTR_HTML and ATTR_CSS]]
+- [[#source-blocks][Source blocks]]
+  - [[#code-fence][Code fence]]
+  - [[#source-block-annotations][Source block annotations]]
+  - [[#highlight-shortcode][Highlight Shortcode]]
+  - [[#source-block-with-caption][Source block with caption]]
+  - [[#source-and-example-blocks-with-list-syntax-in-a-list][Source and example blocks with list syntax in a list]]
+  - [[#org-babel-results][Org Babel Results]]
+  - [[#indented-source-block][Indented source block]]
+  - [[#markdown-source-block-with-hugo-shortcodes][Markdown source block with Hugo shortcodes]]
+  - [[#source-blocks-with-attr_html][Source blocks with ATTR_HTML]]
+  - [[#coderef][Coderef]]
+  - [[#source-blocks-with-langs-that-need-to-be-replaced-in-markdown][Source blocks with langs that need to be replaced in Markdown]]
+- [[#inline-code-blocks][Inline code blocks]]
+  - [[#only-results-default][Only results (default)]]
+  - [[#only-code][Only code]]
+  - [[#both-code-and-results][Both code and results]]
+  - [[#none][None!]]
+  - [[#escape-hugo-shortcodes][Escape Hugo shortcodes]]
+  - [[#using-custom-css-for-inline-src-blocks][Using custom CSS for inline src blocks]]
+- [[#formatting][Formatting]]
+  - [[#general][General]]
+  - [[#keyboard-tag][Keyboard tag]]
+  - [[#multi-line-bold][Multi-line bold]]
+- [[#example-block][Example block]]
+  - [[#simple][Simple]]
+  - [[#example-blocks-with-line-number-annotation][Example blocks with line number annotation]]
+  - [[#example-blocks-with-attr_html][Example blocks with ATTR_HTML]]
+- [[#menu-in-front-matter][Menu in front matter]]
+  - [[#menu-meta-data-in-toml-front-matter][Menu Meta Data in TOML Front Matter]]
+  - [[#menu-meta-data-in-yaml-front-matter][Menu Meta Data in YAML Front Matter]]
+- [[#custom-front-matter][Custom front matter]]
+  - [[#custom-front-matter-in-one-line][Custom front matter in one line]]
+  - [[#custom-front-matter-in-multiple-lines][Custom front matter in multiple lines]]
+  - [[#custom-front-matter-with-list-values][Custom front matter with list values]]
+  - [[#custom-front-matter-with-table-values-or-nested-maps][Custom front matter with table values or nested maps]]
+  - [[#front-matter-values-with-bigints][Front-matter values with BigInts]]
+  - [[#custom-front-matter-value-via-elisp][Custom front matter value via Elisp]]
+- [[#resources][Resources]]
+  - [[#toml][TOML]]
+  - [[#yaml][YAML]]
+- [[#outputs][Outputs]]
+  - [[#output-html-and-json][Output HTML and JSON]]
+  - [[#setting-empty-outputs-is-fine][Setting empty outputs is fine]]
+- [[#post-body][Post body]]
+  - [[#hugo-keyword][~#+hugo~ keyword]]
+  - [[#dealing-with-underscores][Dealing with underscores]]
+  - [[#nested-bold-and-italics][Nested bold and italics]]
+  - [[#italicize-links-with-underscores-goldmark][Italicize links with underscores (Goldmark)]]
+  - [[#italicize-links-with-underscores-blackfriday][Italicize links with underscores (Blackfriday)]]
+  - [[#single-and-double-quotes][Single and Double quotes]]
+  - [[#ndash-and-mdash][/ndash/ `and` *mdash*]]
+  - [[#escaping-hashes-and-exclamations-correctly-in-body][Escaping hashes and exclamations correctly in body]]
+  - [[#escaping-angle-brackets][Escaping angle brackets]]
+  - [[#force-line-break--center-align][Force line break / Center align]]
+  - [[#wrapping-org-headings-in-html-tags][Wrapping Org headings in HTML tags]]
+- [[#page-bundles][Page Bundles]]
+  - [[#bundles-section][Bundles Section]]
+  - [[#page-bundle-a-bundle-container][Page Bundle A (Bundle container)]]
+  - [[#page-bundle-b][Page Bundle B]]
+  - [[#branch-bundle-c][Branch Bundle C]]
+  - [[#headless-page-bundle][Headless Page Bundle]]
+- [[#footnotes-test][Footnotes Test]]
+  - [[#footnotes-1][Footnotes 1]]
+  - [[#footnotes-2][Footnotes 2]]
+  - [[#footnotes-in-a-row][Footnotes in a row]]
+  - [[#multiple-references-of-same-footnote][Multiple references of same footnote]]
+  - [[#multi-line-footnote][Multi-line footnote]]
+  - [[#multi-line-footnote-japanese][Multi-line footnote Japanese]]
+  - [[#bind-footnotes-to-the-preceding-word][Bind footnotes to the preceding word]]
+- [[#tags][Tags]]
+  - [[#basic-tags][Basic tags]]
+  - [[#prefer-hyphens-and-allow-spaces][Prefer hyphens and allow spaces]]
+  - [[#hyphens-in-org-tags][Hyphens in Org tags]]
+  - [[#spaces-in-org-tags][Spaces in Org Tags]]
+  - [[#tags-as-categories][Tags as Categories]]
+  - [[#do-not-leak-posts-immediate-sub-heading-tag-into-the-front-matter][Do not leak post's immediate sub-heading tag into the front-matter]]
+- [[#links][Links]]
+  - [[#links-with-attributes][Links with attributes]]
+  - [[#external-links][External Links]]
+  - [[#within-the-same-post-internal-links][Within the same post (Internal links)]]
+  - [[#links-outside-the-same-post][Links outside the same post]]
+  - [[#link-destination][Link destination]]
+  - [[#url-encoding-in-links][Url encoding in links]]
+  - [[#links-to-info-manual-nodes][Links to Info manual nodes]]
+- [[#equations][Equations]]
+  - [[#mathjax][MathJax]]
+  - [[#equations-exported-to-svg-dvisvgm][Equations exported to SVG (dvisvgm)]]
+  - [[#equations-exported-to-png-dvipng][Equations exported to PNG (dvipng)]]
+- [[#lists][Lists]]
+  - [[#list-following-a-list][List following a list]]
+  - [[#nested-lists][Nested lists]]
+  - [[#paragraphs-in-lists][Paragraphs in lists]]
+  - [[#force-ordered-list-numbering][Force ordered list numbering]]
+  - [[#checklist][Checklist]]
+  - [[#plain-lists-with-attr_html][Plain lists with ATTR_HTML]]
+  - [[#source-blocks-example-blocks-and-lists][Source blocks, example blocks and lists]]
+- [[#quotes][Quotes]]
+  - [[#consecutive-quotes][Consecutive quotes]]
+  - [[#example-block-inside-quote-block][Example block inside quote block]]
+  - [[#multiple-example-blocks-inside-quote-block][Multiple example blocks inside quote block]]
+  - [[#source-block-inside-quote-block-followed-by-another-source-block-outside][Source block inside quote block, followed by another source block outside]]
+  - [[#example-blocks-inside-quote-block-followed-by-another-example-block-outside][Example blocks inside quote block, followed by another example block outside]]
+  - [[#source-block-followed-by-a-quote-block-containing-another-source-block][Source block, followed by a quote block containing another source block]]
+  - [[#example-block-with-escaped-org-syntax-inside-quote-block][Example block with escaped Org syntax inside quote block]]
+  - [[#quote-blocks-with-attr_html][Quote blocks with ATTR_HTML]]
+  - [[#quote-blocks-in-numbered-lists][Quote blocks in numbered lists]]
+- [[#verse][Verse]]
+  - [[#one-verse][One verse]]
+  - [[#consecutive-verses][Consecutive verses]]
+  - [[#verse-for-indentation][Verse for indentation]]
+- [[#org-special-blocks][Org Special Blocks]]
+  - [[#special-blocks][Special Blocks]]
+  - [[#empty-special-block][Empty Special Block]]
+  - [[#special-block-with-just-white-space][Special Block with just white space]]
+  - [[#details-and-summary][Details and summary]]
+  - [[#tikzjax][TikZJax]]
+  - [[#whitespace-trimming][Whitespace trimming]]
+- [[#shortcodes][Shortcodes]]
+  - [[#alert-shortcode-lookalike][Alert Shortcode Lookalike]]
+  - [[#paired-shortcodes-using-special-blocks][Paired Shortcodes using special blocks]]
+  - [[#using-org-macros-in-lieu-of-hugo-shortcodes][Using Org macros in lieu of Hugo shortcodes]]
+- [[#paragraphs][Paragraphs]]
+  - [[#paragraphs-with-attr_html][Paragraphs with ATTR_HTML]]
+- [[#org-todo-keywords][Org TODO keywords]]
+  - [[#post-with-a-todo-heading][Post with a TODO heading]]
+  - [[#post-with-a-done-heading][Post with a DONE heading]]
+  - [[#org-todo-keywords-with-double-underscores][Org TODO keywords with double-underscores]]
+  - [[#deeply-nested-org-todo-headings][Deeply nested Org TODO headings]]
+- [[#level-offset][Level Offset]]
+  - [[#default-level-offset][Default level offset]]
+  - [[#level-offset-unset][Level offset unset]]
+  - [[#level-offset-of-0][Level offset of 0]]
+  - [[#level-offset-of-1][Level offset of 1]]
+  - [[#level-offset-of-2][Level offset of 2]]
+- [[#weights][Weights]]
+  - [[#post-weight-not-the-menu-item-weight][Post Weight (Not the menu item weight)]]
+  - [[#taxonomy-weight-not-the-post-or-menu-item-weight][Taxonomy Weight (Not the post or menu item weight)]]
+- [[#dates][Dates]]
+  - [[#date][Date]]
+  - [[#lastmod-date][Lastmod Date]]
+  - [[#publish-date][Publish Date]]
+  - [[#expiry-date][Expiry Date]]
+  - [[#customizing-date-format][Customizing date format]]
+- [[#preserve-filling-option][Preserve filling option]]
+  - [[#filling-is-preserved][Filling is preserved]]
+  - [[#filling-is-not-preserved][Filling is not preserved]]
+  - [[#chinese-locale][Chinese locale]]
+- [[#section-inheritance][Section Inheritance]]
+  - [[#section-a][Section A]]
+- [[#keywords][Keywords]]
+  - [[#toc][TOC]]
+- [[#citations][Citations]]
+  - [[#org-cite][Org Cite]]
+  - [[#pandoc-citations][Pandoc Citations]]
+- [[#export-options][Export Options]]
+  - [[#table-of-contents-toc][Table of Contents (TOC)]]
+  - [[#subsuperscripts][Sub/superscripts]]
+  - [[#disable-exporting-title][Disable exporting title]]
+  - [[#disable-exporting-author][Disable exporting author]]
+  - [[#creator][Creator]]
+  - [[#preserve-breaks][Preserve Breaks]]
+  - [[#smart-quotes][Smart Quotes]]
+- [[#export-snippets-and-blocks][Export snippets and blocks]]
+  - [[#export-snippet][Export snippet]]
+  - [[#export-block][Export block]]
+- [[#miscellaneous-front-matter][Miscellaneous Front Matter]]
+  - [[#hugo-aliases][Hugo Aliases]]
+  - [[#author][Author]]
+  - [[#keywords-1][Keywords]]
+  - [[#description][Description]]
+  - [[#locale][Locale]]
+  - [[#images][Images]]
+  - [[#videos][Videos]]
+  - [[#audio][Audio]]
+  - [[#series][Series]]
+  - [[#type][Type]]
+  - [[#layout-front-matter][Layout Front-matter]]
+  - [[#url-front-matter][URL Front-matter]]
+  - [[#linktitle-front-matter][Linktitle Front-matter]]
+  - [[#slug-front-matter][Slug Front-matter]]
+  - [[#markup-front-matter][Markup Front-matter]]
+  - [[#replace-front-matter-keys][Replace front-matter keys]]
+  - [[#logbook-notes][LOGBOOK Notes]]
+  - [[#extra-front-matter-tests][Extra Front-matter tests]]
+  - [[#_build-front-matter-bundle][_build Front-matter Bundle]]
+  - [[#front-matter-mixed-bag][Front-matter mixed bag]]
+- [[#date-and-slug-inheritance][Date and slug inheritance]]
+  - [[#date-and-slug-inheritance-english][Date and slug inheritance (English)]]
+  - [[#date-and-slug-inheritance-spanish][Date and slug inheritance (Spanish)]]
+- [[#issues][Issues]]
+  - [[#issue-335][Issue 335]]
+  - [[#issue-470----fill-region-on-inlined-svg-files][Issue 470 -- Fill region on inlined SVG files]]
+- [[#real-examples][Real Examples]]
+  - [[#multifractals-in-ecology-using-r][Multifractals in ecology using R]]
+  - [[#神经网络基础][神经网络基础]]
+- [[#testing-draft-state][Testing Draft state]]
+  - [[#pre-draft-state][Pre-Draft State]]
+  - [[#hugo_draft-set-to-true][HUGO_DRAFT set to true]]
+  - [[#hugo_draft-set-to-false][HUGO_DRAFT set to false]]
+  - [[#hugo_draft-not-set][HUGO_DRAFT not set]]
+  - [[#draft-state-with-other-headings][Draft state with other headings]]
+- [[#illegal-cases][Illegal cases]]
+  - [[#subtree-with-empty-export_file_name][Subtree with empty EXPORT_FILE_NAME]]
+- [[#meta][Meta]]
+  - [[#search][Search]]
+- [[#footnotes][Footnotes]]
+
 **** Alpha 101
 :PROPERTIES:
 :UNNUMBERED: t
@@ -3852,7 +4111,7 @@ resolved to the containing post.
 - Link to target outside the same post: [[*External target]]
 - Another link to target outside the same post: [[* External target with *bold* and /italic/]]
 - Link to subtree by CUSTOM_ID: [[#link-destination]]
-- Link to subtree by ID: [[id:1e5e0bcd-caea-40ad-a75b-e488634c2678]]
+- Link to subtree by ID: [d:1e5e0bcd-caea-40ad-a75b-e488634c2678]]
 - Link to subtree by heading: [[*Link destination]]
 - Link to a subtree with custom Hugo slug: [[*Slug Front-matter]]
 **** Links with descriptions
